[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
pulldown-cmark = "0.10"
chrono = { version = "0.4", features = ["serde"] }
rocket_cors = "0.6"
tokio = { version = "1.49.0", features = ["sync"] }

[dev-dependencies]
tempfile = "3"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"
